crates/biome_js_analyze/tests/specs/nursery/noPlaywrightForceOption/valid/click.js
/* should not generate diagnostics */
await page.locator('button').click();
await page.locator('check').check();
await page.locator('input').fill('text');


