crates/biome_js_analyze/tests/specs/nursery/noPlaywrightForceOption/invalid/parenthesized.js
/* should generate diagnostics */
await page.click("button", ({ force: true }));
await page.locator('x').fill("text", (({ force: true })));
